# Homogenisation

./: .gitignore  pyproject.toml
data/scFv/: scfv_lysis.xlsx
results/loocv_all_data/: model_diagnostics.py
scripts/: incremental_dna_modeling.py  loocv.py  residual_analysis.py  run_analysis.py  run_analysis_.py  run_biomass_specific_loocv.py  standard_analysis.py  symbolic_regression_dna.py  visualization_helpers.py
src/analysis/: cross_validation.py  data_processing.py  evaluation.py  optimization.py  plotting.py  unified_visualization.py  visualization.py
src/analysis/models/: __init__.py  alternative_dna_models.py  base_model.py  biomass_specific_dna_model.py  concentration_dependent_dna_model.py  dna_model.py  dna_model_step_dep.py  dna_models.py  intact_model.py  simple_dna_model.py  simplified_compartment_model.py  structure.py  two_compartment_dna_model.py
src/analysis/models/archive/: alternative_dna_models.py  mechanistic_model.py  simple_dna_model.py  simplified_compartment_model.py  two_compartment_dna_model.py
