[project]
name = "homogenisation"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "seaborn",
    "jax",
    "jaxlib",
    "optax",
    "jaxtyping",
    "beartype",
    "openpyxl",
    "scikit-learn",
    "gplearn"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "jupyterlab",
]